--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-themes": "^0.3.0",
     "prisma": "^7.2.0",
     "react": "^18.3.1",
+    "@ffmpeg/ffmpeg": "^0.11.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
