--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy:functions": "supabase functions deploy add-ad update-ad publish-ad verify-paid --project-ref $SUPABASE_PROJECT_REF"
+    "deploy:functions": "supabase functions deploy verify-paid --project-ref $SUPABASE_PROJECT_REF"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
