--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
